2010-03-29 Chen Yangyang <skabyy@gmail.com>

    * Add "clean up" pane:
      Add a feature to clean APT cache;
      Add a feature to clean Ailurus cache(/var/cache/ailurus);
      Add a feature to remove unused kernel.

2010-03-29 Homer Xing <homer.xing@gmail.com>

    * Do not terminate program when authentication fails.
    * Do not raise exception when GNOMEArtNG thumbnails cannot be downloaded.
    * Change SUN_JDK to OpenJDK.
    * Change VirtualBox to VirtualBox-ose.
    * Remove Dropbox.
    * Remove repositories which provides non-open-source software only.

2010-03-28 Homer Xing <homer.xing@gmail.com>

    * Check DBus status when program start up.

2010-03-27 Homer Xing <homer.xing@gmail.com>

    * Fix "Launch helper exited with error" issue.

2010-03-26 Homer Xing <homer.xing@gmail.com>

    * Fix "Songbird cannot be installed" issue.
    * Improve installation process.

2010-03-26 Starboy Qi <starboy.qi@gmail.com>

    * Improve functionality for setting login icon and start-here icon.

2010-03-26 MA Yue <velly.empire@gmail.com>

    * Show license for every software
    
2010-03-24 Homer Xing <homer.xing@gmail.com>

    * Remove Livna repository.
    * Remove ATrpms repository.
    * Remove Adobe Flash plugin. Add Gnash.
    * Remove Adobe Reader.
    * Remove Adobe Reader repository.
    * Remove Realplayer.
    * Remove Skype.
    * Remove Google repository.
    * Remove Chrome. Add Chromium.
    * Remove VirtualBox.
    * Remove Native 64bit Flash plugin. 

2010-03-23 MA Yue <velly.empire@gmail.com>

    * Add the CompizConfig setting, including:
      Change window decorator
      Random all effects
      Disable minimize effect
      Set multiplier of screen size

2010-03-22 Starboy Qi <starboy.qi@gmail.com>

    * Add functionality for setting application icons.
    * Add functionality for change the login icon.
    * Add functionality for clean the recently documents.
    * Split "common used programming packages" items to several items.